--- a/.github/workflows/buildImage.yml
+++ b/.github/workflows/buildImage.yml
@@ -14,12 +14,12 @@ jobs:
       - uses: actions/checkout@v2
       - name: docker hub login
         env:
-          DOCKER_USER: ${{secret.DOCKER_USER}}
-          DOCKER_PASSWORD: ${{secret.DOCKER_PASSWORD}}
+          DOCKER_USER: ${{secrets.DOCKER_USER}}
+          DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
         run: docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
 
       - name: Build the docker image
         run: docker build . --file Dockerfile --tag leobozcaitano/react-frontend
 
       - name: Push the docker image
-        run: docker push ${{secret.DOCKER_USER}}/react-frontend
+        run: docker push ${{secrets.DOCKER_USER}}/react-frontend
