--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,9 +23,8 @@ jobs:
       - name: Push image to dockerhub
         run: docker push ${{secrets.DOCKER_USER}}/react-frontend
 
-      - name: deploy to cluster
-        uses: steebchen/kubectl@master
-        env:
-          KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
+      - name: Deploy to cluster
+        uses: WyriHaximus/github-action-helm3@v2
         with:
-          args: helm install --values=chart-deploy/values.yaml chart-deploy --generate-name
+          exec: helm upgrade react-frontend ./chart-deploy/ --install --wait --atomic --set=app.name=react-frontend --values=./chart-deploy/values.yaml
+          kubeconfig: '${{ secrets.KUBE_CONFIG_DATA }}'
